# SPEA

./: .gitignore  README.md
SPEA/: pyproject.toml
SPEA/notebooks/: 30d_quadratic_function.ipynb  Presentation.ipynb  bugfix.ipynb  development.ipynb  multi_objective_operators.ipynb  multimodal-fitness.ipynb  operators.ipynb  poloni_run.ipynb  run.ipynb  schaffer_run_1.ipynb  schaffer_run_2.ipynb  viennet_run.ipynb
SPEA/notebooks/development/: clustering.ipynb  schedules.ipynb  selection.ipynb
SPEA/source/: objectives.py  pareto_set.py  spea_optimizer.py  utils.py
SPEA/source/operators/: continuous.py  multimodal.py  multiobjective.py  schedules.py
SPEA/source/parser/: expression.py  symbolic.py
SPEA/source/utils/: distance.py
