[tool.poetry]
name = "SPEA"
version = "0.1.0"
description = ""
authors = ["Krzysztof Zając <kzajac1997@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.2"
pandas = "^1.0.3"
scipy = "^1.4.1"
sympy = "^1.5.1"
matplotlib = "^3.2.1"
seaborn = "^0.10.0"
numba = "^0.48.0"
jupyterlab = "^2.0.1"
black = "^19.10b0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
